--- a/app/views/publish/providers/index.html.erb
+++ b/app/views/publish/providers/index.html.erb
@@ -8,7 +8,7 @@
       <%= render partial: "publish/providers/search" %>
     <% end %>
 
-    <ul class="govuk-list">
+    <ul class="govuk-list" data-qa="provider-list">
       <%= render partial: "publish/providers/provider", collection: @providers %>
     </ul>
 
