--- a/app/views/publish/recruitment_cycles/_locations_info.html.erb
+++ b/app/views/publish/recruitment_cycles/_locations_info.html.erb
@@ -1,5 +1,5 @@
 <h2 class="govuk-heading-m">
-  <%= govuk_link_to "Locations", publish_provider_recruitment_cycle_locations_path(provider.provider_code, year) %>
+  <%= govuk_link_to "Locations", publish_provider_recruitment_cycle_locations_path(provider.provider_code, year), data: { qa: "locations" } %>
 </h2>
 
 <p class="govuk-body">Use this section to:</p>
