--- a/app/views/publish/recruitment_cycles/_about_organisation.html.erb
+++ b/app/views/publish/recruitment_cycles/_about_organisation.html.erb
@@ -1,5 +1,5 @@
 <h2 class="govuk-heading-m">
-  <%= govuk_link_to "About your organisation", details_publish_provider_recruitment_cycle_path(provider.provider_code, year) %>
+  <%= govuk_link_to "About your organisation", details_publish_provider_recruitment_cycle_path(provider.provider_code, year), data: { qa: "about-your-organisation" } %>
 </h2>
 <p class="govuk-body">Use this section to:</p>
 <ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-8">
