--- a/app/views/publish/providers/allocations/allocation_report/_confirmed_state.html.erb
+++ b/app/views/publish/providers/allocations/allocation_report/_confirmed_state.html.erb
@@ -28,7 +28,7 @@
       <td class="govuk-table__cell" data-qa="uplifts">
         <%= allocation[:uplifts] %>
       </td>
-      <td class="govuk-table__cell">
+      <td class="govuk-table__cell data-qa="total"">
         <%= allocation[:total] %>
       </td>
     </tr>
