[0837] Added open state allocation specs

--- a/app/views/publish/providers/allocations/_request_status.html.erb
+++ b/app/views/publish/providers/allocations/_request_status.html.erb
@@ -19,10 +19,10 @@
         <th class="govuk-table__header" data-qa="provider-name" scope="row">
           <%= allocation[:training_provider_name] %>
         </th>
-        <td class="govuk-table__cell">
+        <td class="govuk-table__cell" data-qa="status">
           <%= govuk_tag(text: allocation[:status], colour: allocation[:status_colour]) %>
         </td>
-        <td class="govuk-table__cell">
+        <td class="govuk-table__cell" data-qa="actions">
           <% if allocation[:status] == AllocationsView::Status::YET_TO_REQUEST %>
             <%= govuk_link_to(
               "Confirm choice",
