[877] Make interruption specs more predictable

--- a/app/views/publish/rollover_recruitment/new.html.erb
+++ b/app/views/publish/rollover_recruitment/new.html.erb
@@ -7,7 +7,9 @@
     </h1>
 
     <p class="govuk-body">
-      You are now able to request permission to recruit for fee-funded PE for the <%= next_recruitment_cycle_period_text %> cycle.</p>
+      You are now able to request permission to recruit for fee-funded PE for the <%= next_recruitment_cycle_period_text %> cycle.
+    </p>
+
     <p class="govuk-body">
       You do not need to request permission to recruit in Publish for any courses other than fee-funded PE.
       Accredited bodies should request fee-funded PE by <%= l(Settings.allocations_close_date) %>.
