[0837] Added choose an organisation flow

--- a/app/views/publish/providers/allocations/allocation_request/_open_state.html.erb
+++ b/app/views/publish/providers/allocations/allocation_request/_open_state.html.erb
@@ -89,10 +89,10 @@
 
     <%= govuk_button_link_to(
       "Choose an organisation",
-      #initial_request_provider_recruitment_cycle_allocations_path(
-      #   @provider.provider_code,
-      #   @provider.recruitment_cycle_year,
-      # ),
+      initial_request_publish_provider_recruitment_cycle_allocations_path(
+        @provider.provider_code,
+        @provider.recruitment_cycle_year,
+      ),
     ) %>
 
     <h2 class="govuk-heading-m">
