--- a/app/views/publish/providers/about.html.erb
+++ b/app/views/publish/providers/about.html.erb
@@ -83,7 +83,7 @@
         max_words: 250,
         rows: 15) %>
 
-      <%= f.govuk_submit "Save and publish changes" %>
+      <%= f.govuk_submit "Save and publish" %>
     <% end %>
   </div>
 </div>
