--- a/app/views/publish/courses/subjects/edit.html.erb
+++ b/app/views/publish/courses/subjects/edit.html.erb
@@ -3,7 +3,7 @@
 <% content_for :before_content do %>
   <%= govuk_back_link_to(
     details_publish_provider_recruitment_cycle_course_path(
-      course.provider_code, course.recruitment_cycle_year, course.course_code)) 
+      course.provider_code, course.recruitment_cycle_year, course.course_code))
   %>
 <% end %>
 
@@ -19,7 +19,7 @@
 
       <%= render 'form_fields', form: form %>
 
-      <%= form.submit course.is_running? ? "Save and publish changes" : "Save",
+      <%= form.submit course.is_running? ? "Save and publish" : "Save",
         class: "govuk-button", data: { qa: 'course__save' }
       %>
     <% end %>
