--- a/app/views/publish/providers/visas/edit.html.erb
+++ b/app/views/publish/providers/visas/edit.html.erb
@@ -43,7 +43,7 @@
       <% end %>
 
       <%= render GovukComponent::InsetTextComponent.new(text: I18n.t("success.changes_ttl")) %>
-      <%= f.govuk_submit "Save and publish changes" %>
+      <%= f.govuk_submit "Save and publish" %>
     <% end %>
   </div>
 </div>
