--- a/app/views/publish/courses/requirements/edit.html.erb
+++ b/app/views/publish/courses/requirements/edit.html.erb
@@ -45,7 +45,7 @@
         max_words: 100,
         rows: 10 %>
 
-      <%= f.govuk_submit "Save" %>
+      <%= f.govuk_submit @course.only_published? ? "Save and publish" : "Save" %>
     <% end %>
   </div>
   <aside class="govuk-grid-column-one-third" data-qa="course__related_sidebar">
