--- a/app/views/publish/courses/salary/edit.html.erb
+++ b/app/views/publish/courses/salary/edit.html.erb
@@ -42,7 +42,7 @@
         max_words: 250,
         data: { qa: "course_salary_details" }) %>
 
-      <%= f.govuk_submit "Save" %>
+      <%= f.govuk_submit @course.only_published? ? "Save and publish" : "Save" %>
     <% end %>
   </div>
 </div>
