[830] update course details edits

--- a/app/views/publish/courses/age_range/edit.html.erb
+++ b/app/views/publish/courses/age_range/edit.html.erb
@@ -37,7 +37,7 @@
         <% end %>
       <% end %>
 
-      <%= f.govuk_submit course.is_published? ? "Save and publish" : "Save", data: { qa: "course__save" } %>
+      <%= f.govuk_submit course.only_published? ? "Save and publish" : "Save", data: { qa: "course__save" } %>
     <% end %>
   </div>
 </div>
