[830] update enrichments again

--- a/app/views/publish/courses/fees/edit.html.erb
+++ b/app/views/publish/courses/fees/edit.html.erb
@@ -76,7 +76,7 @@
         max_words: 250,
         data: { qa: "course_financial_support" }) %>
 
-      <%= f.govuk_submit "Save" %>
+      <%= f.govuk_submit @course.only_published? ? "Save and publish" : "Save" %>
     <% end %>
   </div>
   <aside class="govuk-grid-column-one-third" data-qa="course__related_sidebar">
