--- a/app/views/publish/courses/sites/edit.html.erb
+++ b/app/views/publish/courses/sites/edit.html.erb
@@ -45,7 +45,7 @@
        <% end %>
       <% end %>
 
-      <%= f.govuk_submit course.only_published? ? "Save and publish" : "Save" %>
+      <%= f.govuk_submit course.is_published? ? "Save and publish" : "Save" %>
     <% end %>
   </div>
 </div>
