--- a/app/views/publish/providers/allocations/_request_status.html.erb
+++ b/app/views/publish/providers/allocations/_request_status.html.erb
@@ -26,11 +26,11 @@
           <% if allocation[:status] == AllocationsView::Status::YET_TO_REQUEST %>
             <%= govuk_link_to(
               "Confirm choice",
-              # new_repeat_request_provider_recruitment_cycle_allocation_path(
-              #   @provider.provider_code,
-              #   @provider.recruitment_cycle_year,
-              #   allocation[:training_provider_code],
-              # ),
+              new_repeat_request_publish_provider_recruitment_cycle_allocation_path(
+                @provider.provider_code,
+                @provider.recruitment_cycle_year,
+                allocation[:training_provider_code],
+              ),
             ) %>
           <% else %>
             <% if allocation[:request_type] == AllocationsView::RequestType::INITIAL %>
@@ -46,12 +46,12 @@
             <% else %>
               <%= govuk_link_to(
                 "Change",
-                # edit_provider_recruitment_cycle_allocation_path(
-                #   @provider.provider_code,
-                #   @provider.recruitment_cycle_year,
-                #   allocation[:training_provider_code],
-                #   id: allocation[:id],
-                # ),
+                edit_publish_provider_recruitment_cycle_allocation_path(
+                  @provider.provider_code,
+                  @provider.recruitment_cycle_year,
+                  allocation[:training_provider_code],
+                  id: allocation[:id],
+                ),
               ) %>
             <% end %>
           <% end %>
