--- a/app/views/publish/providers/allocations/requests/_not_requested.html.erb
+++ b/app/views/publish/providers/allocations/requests/_not_requested.html.erb
@@ -25,7 +25,7 @@
     <p class="govuk-body">
       <%= govuk_link_to(
         "Return to Request PE courses for #{next_allocation_cycle_period_text}",
-        provider_recruitment_cycle_allocations_path(@provider.provider_code, Settings.current_cycle),
+        publish_provider_recruitment_cycle_allocations_path(@provider.provider_code, @provider.recruitment_cycle_year),
       ) %>
     </p>
   </div>
