--- a/app/views/publish/providers/locations/index.html.erb
+++ b/app/views/publish/providers/locations/index.html.erb
@@ -1,13 +1,7 @@
 <% page_title = "Locations" %>
 
 <% content_for :page_title, page_title %>
-
-<% content_for :before_content do %>
-  <%= govuk_back_link_to(
-      publish_provider_recruitment_cycle_path(@provider.provider_code, @provider.recruitment_cycle_year)
-    )
-  %>
-<% end %>
+<%= content_for :before_content, render_breadcrumbs(:sites) %>
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
