--- a/app/views/publish/providers/show.html.erb
+++ b/app/views/publish/providers/show.html.erb
@@ -1,5 +1,6 @@
 <% content_for :page_title, @provider.provider_name %>
-<% if @has_multiple_providers %>
+
+<% if current_user.has_multiple_providers? %>
   <%= content_for :before_content, render_breadcrumbs(:provider) %>
 <% end %>
 
