--- a/app/views/publish/users/index.html.erb
+++ b/app/views/publish/users/index.html.erb
@@ -1,11 +1,5 @@
 <% page_title = "Users" %>
-
-<% content_for :before_content do %>
-  <%= govuk_back_link_to(
-        publish_provider_recruitment_cycle_path(@provider.provider_code, @provider.recruitment_cycle_year)
-      )
-  %>
-<% end %>
+<%= content_for :before_content, render_breadcrumbs(:users) %>
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
