--- a/app/views/magic_links/magic_link_sent.html.erb
+++ b/app/views/magic_links/magic_link_sent.html.erb
@@ -10,8 +10,9 @@
       sign in to Publish teacher training courses.
     </p>
     <p class="govuk-body">
-      If our email doesn’t arrive within 5 minutes, check your spam and trash folder, or
-      <%= govuk_link_to "try again", sign_in_path %>
+      If our email doesn’t arrive within 5 minutes, check your spam and trash folder,
+      <%= govuk_link_to "try again", sign_in_path %> or email 
+      <%= bat_contact_mail_to "support", subject: "Publish teacher training courses support", class: "govuk-footer__link" %>.
     </p>
   </div>
 </div>
