--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,10 +46,29 @@
         <%= yield :before_content %>
       </div>
 
-    <% if current_user %>
-      <% if FeatureService.enabled?(:new_publish_navigation) && current_user.has_multiple_providers_in_current_recruitment_cycle? && !@provider.nil? && !request.path.include?('support') %>
-       <%= render TitleBar::View.new(title: @provider.provider_name) %>
+    <% if FeatureService.enabled?(:new_publish_navigation) %>
+
+      <% if current_user %>
+        <% if current_user.has_multiple_providers_in_current_recruitment_cycle? && @provider && !request.path.include?('support') %>
+         <%= render TitleBar::View.new(title: @provider.provider_name) %>
+        <% end %>
       <% end %>
+
+      <% if FeatureService.enabled?(:new_publish_navigation) && @provider.present? && !current_page?(root_path) && !@provider.rolled_over? %>
+        <%= render(NavigationBar::View.new(
+          items: [
+            { name: "Courses", url: publish_provider_recruitment_cycle_courses_path(@provider.provider_code, @provider.recruitment_cycle_year) },
+            { name: "Locations", url: publish_provider_recruitment_cycle_locations_path(@provider.provider_code, @provider.recruitment_cycle_year) },
+            { name: "Users", url: users_publish_provider_path(code: @provider.provider_code) },
+            { name: "Training partners", url: publish_provider_recruitment_cycle_training_providers_path(@provider.provider_code, @provider.recruitment_cycle_year) },
+            { name: "Organisation details", url: details_publish_provider_recruitment_cycle_path(@provider.provider_code, @provider.recruitment_cycle_year) },
+          ],
+          current_path: request.path,
+          current_user: @current_user
+          )
+          ) %>
+      <% end %>
+
     <% end %>
 
       <main class="govuk-main-wrapper " id="main-content" role="main">
