--- a/app/views/publish/users/index.html.erb
+++ b/app/views/publish/users/index.html.erb
@@ -1,4 +1,5 @@
 <% page_title = "Users" %>
+<%= content_for :page_title, page_title %>
 <%= content_for :before_content, render_breadcrumbs(:users) %>
 
 <div class="govuk-grid-row">
