--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,7 +48,11 @@
         <% end %>
       </div>
 
-      <%= govuk_link_to t('change_organisation'), root_path %>
+    <% unless current_user.nil? %>
+      <% if FeatureService.enabled?(:new_publish_navigation) && current_user.has_multiple_providers_in_current_recruitment_cycle? && !@provider.nil? && !request.path.include?('support') %>
+       <%= render TitleBar::View.new(title: @provider.provider_name) %>
+      <% end %>
+    <% end %>
 
       <main class="govuk-main-wrapper " id="main-content" role="main">
         <div class="govuk-width-container">
