--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,6 +3,14 @@
     <div class="govuk-footer__meta">
       <div class="govuk-footer__meta-item govuk-footer__meta-item--grow">
         <div class="govuk-footer__meta-custom">
+          <% if current_user.present? && current_user.admin? && current_user.accepted_terms? %>
+            <h2 class="govuk-heading-m" id="admin">Support tools</h2>
+            <ul class="govuk-footer__inline-list govuk-!-margin-bottom-6">
+              <li class="govuk-footer__inline-list-item">
+                <%= link_to "Access Requests (#{AccessRequest.requested.count})", publish_access_requests_path, class: "govuk-footer__link", data: { qa: "access_requests_link" } %>
+              </li>
+            </ul>
+          <% end %>
           <h2 class="govuk-heading-m">Get support</h2>
           <ul class="govuk-footer__meta-custom govuk-list govuk-!-font-size-16 govuk-!-margin-bottom-8">
             <li>Email: <%= bat_contact_mail_to subject: "Publish teacher training courses support", class: "govuk-footer__link" %></li>
