Remove recruitment cycle text
- From all nav bar sections unless the feature flag is activated and we are in rollover.

--- a/app/views/publish/courses/index.html.erb
+++ b/app/views/publish/courses/index.html.erb
@@ -2,7 +2,9 @@
 <%= content_for :before_content, render_breadcrumbs(:courses) %>
 
 <h1 class="govuk-heading-l">
-  <span class="govuk-caption-l"><%= @recruitment_cycle.title %></span>
+  <% if @provider.rolled_over? && FeatureService.enabled?(:new_publish_navigation) %>
+    <span class="govuk-caption-l"><%= @recruitment_cycle.title %></span>
+  <% end %>
   Courses
 </h1>
 
