--- a/app/views/publish/providers/details.html.erb
+++ b/app/views/publish/providers/details.html.erb
@@ -24,7 +24,9 @@
 <% end %>
 
 <h1 class="govuk-heading-l">
-  <span class="govuk-caption-l"><%= @recruitment_cycle.title %></span>
+  <% if @provider.rolled_over? && FeatureService.enabled?(:new_publish_navigation) %>
+    <span class="govuk-caption-l"><%= @recruitment_cycle.title %></span>
+  <% end %>
   About your organisation
 </h1>
 
