--- a/app/components/header/style.scss
+++ b/app/components/header/style.scss
@@ -13,30 +13,36 @@
   }
 }
 
-.govuk-header__container {
-  .app-header--development & {
-    border-bottom-color: govuk-colour("dark-grey");
-  }
 
-  .app-header--qa & {
-    border-bottom-color: govuk-colour("orange");
-  }
+.app-header--development .govuk-header__container,
+.app-header--development.app-header--full-border, {
+  border-bottom-color: govuk-colour("dark-grey");
+}
 
-  .app-header--review & {
-    border-bottom-color: govuk-colour("purple");
-  }
+.app-header--qa .govuk-header__container,
+.app-header--qa.app-header--full-border {
+  border-bottom-color: govuk-colour("orange");
+}
 
-  .app-header--rollover & {
-    border-bottom-color: govuk-colour("turquoise");
-  }
+.app-header--review .govuk-header__container,
+.app-header--review.app-header--full-border,
+.app-header--sandbox .govuk-header__container,
+.app-header--sandbox.app-header--full-border {
+  border-bottom-color: govuk-colour("purple");
+}
 
-  .app-header--staging & {
-    border-bottom-color: govuk-colour("red");
-  }
+.app-header--rollover .govuk-header__container,
+.app-header--rollover.app-header--full-border {
+  border-bottom-color: govuk-colour("turquoise");
+}
 
-  .app-header--sandbox & {
-    border-bottom-color: govuk-colour("purple");
-  }
+.app-header--staging .govuk-header__container,
+.app-header--staging.app-header--full-border {
+  border-bottom-color: govuk-colour("red");
+}
+
+.app-header--production.app-header--full-border {
+  border-bottom-color: govuk-colour("blue");
 }
 
 .govuk-header__navigation-list {
