--- a/app/views/publish/providers/details.html.erb
+++ b/app/views/publish/providers/details.html.erb
@@ -24,7 +24,7 @@
 <% end %>
 
 <h1 class="govuk-heading-l">
-  <% if @provider.rolled_over? && FeatureService.enabled?(:new_publish_navigation) %>
+  <% if rolled_over_and_new_nav?(@provider) %>
     <span class="govuk-caption-l"><%= @recruitment_cycle.title %></span>
   <% end %>
   About your organisation
