--- a/app/views/publish/providers/locations/index.html.erb
+++ b/app/views/publish/providers/locations/index.html.erb
@@ -6,7 +6,7 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <h1 class="govuk-heading-l">
-      <% if @provider.rolled_over? && FeatureService.enabled?(:new_publish_navigation) %>
+      <% if rolled_over_and_new_nav?(@provider) %>
         <span class="govuk-caption-l"><%= @recruitment_cycle.title %></span>
       <% end %>
       <%= page_title %>
