--- a/app/views/publish/training_providers/index.html.erb
+++ b/app/views/publish/training_providers/index.html.erb
@@ -7,7 +7,7 @@
 <%= content_for :before_content, render_breadcrumbs(:training_providers) %>
 
   <h1 class="govuk-heading-l">
-    <% if @provider.rolled_over? && FeatureService.enabled?(:new_publish_navigation) %>
+    <% if rolled_over_and_new_nav?(@provider) %>
       <span class="govuk-caption-l"><%= @recruitment_cycle.title %></span>
     <% end %>
 
