--- a/app/components/title_bar/view.html.erb
+++ b/app/components/title_bar/view.html.erb
@@ -1,6 +1,6 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-full">
-    <p class="govuk-heading-s title-bar-inline"><%= title %></p>
+    <p class="govuk-heading-s title-bar-inline govuk-!-margin-bottom-2"><%= title %></p>
     <%= link %>
   </div>
 </div>
