--- a/app/views/publish/shared/_navigation_bar_with_training_partners.html.erb
+++ b/app/views/publish/shared/_navigation_bar_with_training_partners.html.erb
@@ -2,7 +2,7 @@
   items: [
     { name: t("navigation_bar.courses"), url: publish_provider_recruitment_cycle_courses_path(@provider.provider_code, @provider.recruitment_cycle_year) },
     { name: t("navigation_bar.locations"), url: publish_provider_recruitment_cycle_locations_path(@provider.provider_code, @provider.recruitment_cycle_year) },
-    { name: t("navigation_bar.users"), url: users_publish_provider_path(code: @provider.provider_code) },
+    { name: t("navigation_bar.users"), url: users_publish_provider_path(code: @provider.provider_code), additional_url: request_access_publish_provider_path(@provider.provider_code) },
     { name: t("navigation_bar.training_partners"), url: publish_provider_recruitment_cycle_training_providers_path(@provider.provider_code, @provider.recruitment_cycle_year) },
     { name: t("navigation_bar.organisation_details"), url: details_publish_provider_recruitment_cycle_path(@provider.provider_code, @provider.recruitment_cycle_year) },
   ],
