--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,7 +39,7 @@
     <% end %>
 
       <div class="govuk-width-container">
-        <% if display_phase_banner_border?(current_user) %>
+        <% if display_phase_banner_border?(current_user) && FeatureService.enabled?(:new_publish_navigation) %>
           <%= render PhaseBanner::View.new(no_border: true) %>
         <% else  %>
           <%= render PhaseBanner::View.new %>
