Extend blue line across the full width of the page in prod

--- a/app/components/header/style.scss
+++ b/app/components/header/style.scss
@@ -41,6 +41,7 @@
   border-bottom-color: govuk-colour("red");
 }
 
+.app-header--production .govuk-header__container,
 .app-header--production.app-header--full-border {
   border-bottom-color: govuk-colour("blue");
 }
