--- a/app/views/publish/providers/details.html.erb
+++ b/app/views/publish/providers/details.html.erb
@@ -27,7 +27,12 @@
   <% if rolled_over_and_new_nav?(@provider) %>
     <span class="govuk-caption-l"><%= @recruitment_cycle.title %></span>
   <% end %>
-  About your organisation
+
+  <% if FeatureService.enabled?(:new_publish_navigation) %>
+    Organisation details
+  <% else %>
+    About your organisation
+  <% end %>
 </h1>
 
 <div class="govuk-grid-row">
