--- a/app/views/publish/training_providers/courses/index.html.erb
+++ b/app/views/publish/training_providers/courses/index.html.erb
@@ -2,7 +2,11 @@
 <%= content_for :before_content, render_breadcrumbs(:training_provider_courses) %>
 
 <h1 class="govuk-heading-l">
-  <span class="govuk-caption-l">Training provider</span>
+  <% if FeatureService.enabled?(:new_publish_navigation) %>
+    <span class="govuk-caption-l">Training partner</span>
+  <% else %>
+    <span class="govuk-caption-l">Training provider</span>
+  <% end %>
   <%= @training_provider.provider_name %>
 </h1>
 
