prod is named prod not production...
production is named beta...

--- a/app/components/header/style.scss
+++ b/app/components/header/style.scss
@@ -13,7 +13,7 @@
   }
 }
 
-.app-header--prod.app-header--full-border {
+.app-header--beta.app-header--full-border {
   border-bottom-color: govuk-colour("blue");
 }
 
