[xxx] Bump to Rails 7 and update related files

--- a/app/views/publish/providers/allocations/requests/_not_requested.html.erb
+++ b/app/views/publish/providers/allocations/requests/_not_requested.html.erb
@@ -14,7 +14,7 @@
     <h2 class="govuk-heading-m">What happens now?</h2>
     <p class="govuk-body">
       You don't need to do anything else. If you want to change this choice, you
-      have until <%= Settings.allocations_close_date.to_s(:govuk_short) %> to do
+      have until <%= Settings.allocations_close_date.to_fs(:govuk_short) %> to do
       so.
     </p>
 
