--- a/app/views/publish/providers/allocations/requests/_yes_requested.html.erb
+++ b/app/views/publish/providers/allocations/requests/_yes_requested.html.erb
@@ -12,7 +12,7 @@
     ) %>
     <h2 class="govuk-heading-m">What happens now?</h2>
     <p class="govuk-body">
-      You have until <%= Settings.allocations_close_date.to_s(:govuk_short) %> to
+      You have until <%= Settings.allocations_close_date.to_fs(:govuk_short) %> to
       change this request. After this date,  we’ll send an email to your
       organisation confirming your choice and setting out next steps.
     </p>
